--- a/app/src/main/res/layout/fragment_challange.xml
+++ b/app/src/main/res/layout/fragment_challange.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/main_background"
-    tools:context=".ui.challange.SlideshowFragment">
+    tools:context=".ui.challenge.ChallengesFragment">
 
     <TextView
         android:id="@+id/text_slideshow"
