--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -18,8 +18,8 @@
         tools:layout="@layout/fragment_clubs" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.softserve.teachua.ui.challange.SlideshowFragment"
+        android:id="@+id/nav_challenges"
+        android:name="com.softserve.teachua.ui.challenge.ChallengesFragment"
         android:label="@string/menu_challange"
         tools:layout="@layout/fragment_challange" />
 </navigation>
