--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="toolbar_orange">#f5a255</color>
     <color name="colorDarkGrey">#D1D1D1</color>
     <color name="checkbox">#0050B3</color>
+
+    <color name="tint">#6F000000</color>
 </resources>
