--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,13 +5,26 @@
     <color name="purple_700">#f5a255</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
     <color name="blue">#3562c4</color>
-    <color name="white">#FFFFFFFF</color>
     <color name="text">#233b55</color>
     <color name="toolbar_orange">#f5a255</color>
     <color name="colorDarkGrey">#D1D1D1</color>
     <color name="checkbox">#0050B3</color>
 
+    //light theme colors
+    <color name="orange_600">#F38916</color>
+    <color name="blue_600">#1681f3</color>
+    <color name="gray_200">#E8E8E8</color>
+    <color name="black">#FF000000</color>
+    <color name="orange_100">#FFD7C9</color>
+    //f7cfc2
+    //fddeb3
+
+    //dark theme colors
+    <color name="orange_900">#C43E00</color>
+    <color name="gray_900">#1F1F1F</color>
+    <color name="white">#FFFFFFFF</color>
+    
+    //color to tint images
     <color name="tint">#6F000000</color>
 </resources>
