--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -3,8 +3,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="300dp"
-    android:layout_marginTop="50dp"
-    card_view:cardBackgroundColor="@color/white"
+    card_view:cardBackgroundColor="?colorSurface"
     android:clickable="true"
     android:focusable="true"
     android:orientation="vertical"
@@ -43,7 +42,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
             android:text="Title"
-            android:textColor="@color/text"
+            android:textColor="?colorOnSurface"
             android:textSize="16sp"
             android:textStyle="bold" />
 
@@ -52,7 +51,7 @@
             android:id="@+id/categoryDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/text"
+            android:textColor="?colorOnSurface"
             android:layout_marginTop="110dp"
             android:text="This Would be a description of Club" />
 
@@ -61,7 +60,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Переглянути"
-            android:textColor="@color/blue"
+            android:textColor="?colorOnSurface"
             android:layout_marginTop="178dp"
             android:textStyle="bold"/>
 
