--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,21 +2,36 @@
     <!-- Base application theme. -->
     <style name="Theme.TeachUaV20" parent="Theme.AppCompat.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/orange_600</item>
+        <item name="colorPrimaryVariant">@color/orange_600</item>
+        <item name="colorOnPrimary">@color/black</item>
+        <item name="android:textColorPrimary">@color/black</item>
+        <item name="android:textColorSecondary">@color/black</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondary">@color/blue_600</item>
+        <item name="colorSecondaryVariant">@color/blue_600</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="colorBackgroundFloating">@color/gray_200</item>
+        <item name="colorOnBackground">@color/black</item>
+        <item name="colorSurface">@color/orange_100 </item>
+        <item name="colorOnSurface">@color/black</item>
     </style>
 
     <style name="Theme.TeachUaV20.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="ThemeOverlay.MyApp.NavigationView" parent="ThemeOverlay.AppCompat.Light">
+        <!-- This is the menu item text color. -->
+        <item name="android:textColorPrimary">@color/black</item>
+        <!-- This is the menu header text color. -->
+        <item name="android:textColorSecondary">@color/black</item>
+        <!-- This is the selected color. -->
+        <item name="colorPrimary">@color/orange_600</item>
     </style>
 
 
