--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,7 +8,7 @@
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/toolbar_orange</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
@@ -19,11 +19,16 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="Theme.TeachUaV20.Button">
+        <item name="android:background">@color/toolbar_orange</item>
+    </style>
+
 
     <style name="CustomAlertDialog" parent="Theme.AppCompat.Dialog">
         <item name="android:windowBackground">@drawable/popup_background</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowIsFloating">true</item>
+
     </style>
 
     <style name="spinner_style">
