--- a/app/src/main/res/drawable/main_background.xml
+++ b/app/src/main/res/drawable/main_background.xml
@@ -3,8 +3,9 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-
-        android:endColor="#f7cfc2"
-        android:startColor="#f5daca"
+        android:endColor="@color/gray_200"
+        android:startColor="@color/gray_200"
         android:type="linear" />
+    <!--        android:endColor="#f7cfc2"-->
+<!--        android:startColor="#f5daca"-->
 </shape>
