--- a/app/src/main/res/layout/fragment_clubs.xml
+++ b/app/src/main/res/layout/fragment_clubs.xml
@@ -20,35 +20,34 @@
             android:id="@+id/appbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/purple_700"
+            android:background="?attr/colorPrimary"
             android:orientation="vertical"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark">
+            android:theme="@style/ThemeOverlay.MyApp.NavigationView">
 
 
-            <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
+            <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:layout_alignParentTop="true"
-                android:background="@color/toolbar_orange"
+                android:background="?attr/colorPrimary"
                 app:layout_scrollFlags="scroll|enterAlways"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                app:titleTextColor="@color/white">
+                >
 
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
                     <TextView
-                        android:layout_marginTop="15dp"
-                        android:layout_marginStart="0dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="0dp"
+                        android:layout_marginTop="15dp"
+                        android:text="Гуртки"
+                        android:textColor="?attr/colorOnPrimary"
                         android:textSize="20sp"
-                        android:textColor="@color/white"
-                        android:textStyle="bold"
-                        android:text="Гуртки"/>
+                        android:textStyle="bold" />
 
                     <EditText
                         android:id="@+id/searchEdit"
@@ -58,7 +57,6 @@
                         android:hint="Search club"
                         android:imeOptions="actionSearch"
                         android:inputType="text"
-                        android:textColor="@color/white"
                         app:endIconMode="clear_text">
 
                     </EditText>
@@ -75,22 +73,24 @@
                         android:visibility="invisible" />
 
 
-                    <ImageView
+                    <androidx.appcompat.widget.AppCompatImageView
                         android:id="@+id/searchBtn"
                         android:layout_width="45dp"
                         android:layout_height="45dp"
                         android:layout_marginStart="180dp"
                         android:layout_marginTop="90dp"
-                        android:background="@drawable/ic_search" />
+                        android:background="@drawable/ic_search"
+                        app:tint="@color/black" />
 
 
-                    <ImageView
+                    <androidx.appcompat.widget.AppCompatImageView
                         android:id="@+id/searchAdvBtn"
                         android:layout_width="45dp"
                         android:layout_height="45dp"
                         android:layout_marginStart="230dp"
                         android:layout_marginTop="90dp"
-                        android:background="@drawable/ic_adv_search" />
+                        android:background="@drawable/ic_adv_search"
+                        android:tint="@color/black" />
 
 
                     <Spinner
