--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,18 +9,18 @@
         <item name="android:textColorSecondary">@color/black</item>
         <!-- Secondary brand color. -->
 
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/toolbar_orange</item>
-=======
-        <item name="colorSecondary">@color/blue_600</item>
-        <item name="colorSecondaryVariant">@color/blue_600</item>
-        <item name="colorOnSecondary">@color/black</item>
+<!--        <item name="colorSecondary">@color/teal_200</item>-->
+<!--        <item name="colorSecondaryVariant">@color/teal_700</item>-->
+<!--        <item name="colorOnSecondary">@color/toolbar_orange</item>-->
+<!--        <item name="colorSecondary">@color/blue_600</item>-->
+<!--        <item name="colorSecondaryVariant">@color/blue_600</item>-->
+<!--        <item name="colorOnSecondary">@color/black</item>-->
 
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="colorBackgroundFloating">@color/gray_200</item>
+        <item name="android:colorBackground">@color/gray_200</item>
         <item name="colorOnBackground">@color/black</item>
         <item name="colorSurface">@color/orange_100 </item>
         <item name="colorOnSurface">@color/black</item>
@@ -34,7 +34,8 @@
 
     <style name="Theme.TeachUaV20.Button">
         <item name="android:background">@color/toolbar_orange</item>
-=======
+    </style>
+
     <style name="ThemeOverlay.MyApp.NavigationView" parent="ThemeOverlay.AppCompat.Light">
         <!-- This is the menu item text color. -->
         <item name="android:textColorPrimary">@color/black</item>
@@ -63,6 +64,8 @@
         <item name="android:paddingBottom">5dp</item>
 
     </style>
+
+
 
     <style name="Theme.TeachUaV20.AppBarOverlay" parent="Theme.AppCompat.NoActionBar" />
 
