returned previous design, implemented all views for task fragment, fixed search, fixed bug with categories, added loading progress bar for all screens

--- a/app/src/main/res/drawable/main_background.xml
+++ b/app/src/main/res/drawable/main_background.xml
@@ -3,9 +3,7 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:endColor="@color/gray_200"
-        android:startColor="@color/gray_200"
+        android:endColor="#f7cfc2"
+        android:startColor="#f5daca"
         android:type="linear" />
-    <!--        android:endColor="#f7cfc2"-->
-<!--        android:startColor="#f5daca"-->
 </shape>
