--- a/app/src/main/res/layout/fragment_challenges.xml
+++ b/app/src/main/res/layout/fragment_challenges.xml
@@ -4,15 +4,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/contentChallenges"
+    android:background="?colorBackgroundFloating"
     tools:context=".ui.challenges.ChallengesFragment">
 
-    <androidx.compose.ui.platform.ComposeView
-        android:id="@+id/compose"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/challengesList"
+        android:background="@drawable/main_background"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="match_parent"/>
+
+    <TextView
+        android:id="@+id/connectionProblemChallenges"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/connection_problem"
+        android:textColor="?attr/colorOnBackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/progressBarChallenges"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:outlineAmbientShadowColor="?attr/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:targetApi="p" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
