--- a/app/src/main/res/layout/item_dropdown.xml
+++ b/app/src/main/res/layout/item_dropdown.xml
@@ -4,5 +4,5 @@
     android:layout_width="120dp"
     android:layout_height="wrap_content"
     android:id="@+id/text1"
-    android:textColor="@color/black">
+    android:textColor="@color/white">
 </TextView>
