--- a/app/src/main/res/layout/fragment_clubs.xml
+++ b/app/src/main/res/layout/fragment_clubs.xml
@@ -79,8 +79,7 @@
                         android:layout_height="45dp"
                         android:layout_marginStart="180dp"
                         android:layout_marginTop="90dp"
-                        android:background="@drawable/ic_search"
-                        app:tint="@color/black" />
+                        android:background="@drawable/ic_search"/>
 
 
                     <androidx.appcompat.widget.AppCompatImageView
@@ -89,8 +88,7 @@
                         android:layout_height="45dp"
                         android:layout_marginStart="230dp"
                         android:layout_marginTop="90dp"
-                        android:background="@drawable/ic_adv_search"
-                        android:tint="@color/black" />
+                        android:background="@drawable/ic_adv_search" />
 
 
                     <Spinner
