--- a/app/src/main/res/menu-v26/activity_main_drawer.xml
+++ b/app/src/main/res/menu-v26/activity_main_drawer.xml
@@ -16,6 +16,11 @@
         <item
             android:id="@+id/nav_challenges"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_challange" />
+            android:title="@string/menu_challenge" />
+        <item
+            android:id="@+id/nav_about_us"
+            android:icon="@drawable/ic_menu_slideshow"
+            android:title="@string/menu_about_us"
+            />
     </group>
 </menu>
