FIXED CIRCLES FOR HOME FRAGMENT

--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -4,16 +4,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/toolbar_orange"
-    android:theme="@style/Theme.TeachUaV20.NoActionBar">
+    android:theme="@style/Theme.TeachUaV20.AppBarOverlay">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:visibility="visible"
-        android:background="@color/toolbar_orange"
-        app:popupTheme="@style/Theme.TeachUaV20.PopupOverlay" />
+        android:visibility="visible" />
 </com.google.android.material.appbar.AppBarLayout>
 
 
