--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:innerRadius="0dp"
-    android:shape="ring"
-    android:thicknessRatio="1.9"
-    android:useLevel="true" >
-    <solid android:color="@android:color/transparent" />
-
+    android:shape="oval">
+    <stroke
+        android:width="1dp"
+        android:color="#78d9ff"/>
 </shape>
