--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -3,12 +3,14 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="300dp"
+    xmlns:app="http://schemas.android.com/tools"
     card_view:cardBackgroundColor="@color/white"
     android:clickable="true"
     android:focusable="true"
     android:orientation="vertical"
     card_view:cardUseCompatPadding="true"
     card_view:cardCornerRadius="20dp"
+    app:ignore="NamespaceTypo"
     card_view:contentPadding="10dp">
 
     <RelativeLayout
@@ -17,24 +19,60 @@
         android:orientation="vertical"
         android:padding="16dp">
 
-        <androidx.cardview.widget.CardView
+        <LinearLayout
             android:id="@+id/categoryBackground"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:elevation="12dp"
-            android:innerRadius="10dp"
-            android:shape="ring"
-            android:thicknessRatio="1.9"
-            card_view:cardCornerRadius="40dp">
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:backgroundTint="@color/orange_600"
+            android:background="@drawable/circle">
 
             <ImageView
                 android:id="@+id/categoryLogo"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:padding="8dp" />
-        </androidx.cardview.widget.CardView>
+                android:padding="8dp"
+
+                app:ignore="ContentDescription" />
+
+
+        </LinearLayout>
+
+        <!--        <androidx.cardview.widget.CardView-->
+        <!--            android:id="@+id/categoryBackground"-->
+        <!--            android:background="@drawable/circle"-->
+        <!--            android:layout_width="40dp"-->
+        <!--            android:layout_height="40dp"-->
+        <!--            android:elevation="12dp"-->
+        <!--            android:thicknessRatio="1.9"-->
+        <!--            >-->
+
+        <!--            <ImageView-->
+        <!--                android:id="@+id/categoryLogo"-->
+        <!--                android:layout_width="40dp"-->
+        <!--                android:layout_height="40dp"-->
+        <!--                android:padding="8dp"-->
+        <!--                app:ignore="ContentDescription" />-->
+        <!--        </androidx.cardview.widget.CardView>-->
+
+
+        <!--        <androidx.cardview.widget.CardView-->
+        <!--            android:id="@+id/categoryBackground"-->
+        <!--            android:layout_width="40dp"-->
+        <!--            android:layout_height="40dp"-->
+        <!--            android:thicknessRatio="1.9"-->
+        <!--            android:elevation="12dp"-->
+        <!--            app:cardCornerRadius="40dp">-->
+
+        <!--            <ImageView-->
+        <!--                android:id="@+id/categoryLogo"-->
+        <!--                android:layout_width="40dp"-->
+        <!--                android:layout_height="40dp"-->
+
+        <!--                android:layout_alignParentTop="true"-->
+        <!--                android:layout_centerHorizontal="true"-->
+        <!--                android:padding="8dp"-->
+        <!--                tools:ignore="ContentDescription" />-->
+        <!--        </androidx.cardview.widget.CardView>-->
 
         <TextView
             android:id="@+id/categoryTitle"
