--- a/app/src/main/res/layout/fragment_clubs.xml
+++ b/app/src/main/res/layout/fragment_clubs.xml
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
             android:orientation="vertical"
-            android:theme="@style/ThemeOverlay.MyApp.NavigationView">
+            android:theme="@style/Theme.TeachUaV20.AppBarOverlay">
 
 
             <androidx.appcompat.widget.Toolbar
@@ -32,7 +32,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:layout_alignParentTop="true"
-                android:background="?attr/colorPrimary"
                 app:layout_scrollFlags="scroll|enterAlways"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
@@ -46,7 +45,6 @@
                         android:layout_marginStart="50dp"
                         android:layout_marginTop="15dp"
                         android:text="Гуртки"
-                        android:textColor="?attr/colorOnPrimary"
                         android:textSize="20sp"
                         android:textStyle="bold" />
 
@@ -90,7 +88,7 @@
                         android:layout_marginStart="235dp"
                         android:layout_marginTop="80dp"
                         android:background="@drawable/ic_search"
-                        app:tint="@color/black" />
+                         />
 
 
                     <androidx.appcompat.widget.AppCompatImageView
@@ -100,7 +98,7 @@
                         android:layout_marginStart="290dp"
                         android:layout_marginTop="80dp"
                         android:background="@drawable/ic_adv_search"
-                        android:tint="@color/black" />
+                         />
 
 
                     <Spinner
