--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -44,7 +44,7 @@
 
     <fragment
         android:id="@+id/challengeFragment"
-        android:label="@string/challenge"
+        android:label="@string/menu_challenge"
         android:name="com.softserve.teachua.ui.challenge.ChallengeFragment"
         tools:layout="@layout/challenge_fragment">
         <argument
@@ -58,7 +58,7 @@
 
     <fragment
         android:id="@+id/taskFragment"
-        android:label="@string/task"
+        android:label="@string/menu_task"
         android:name="com.softserve.teachua.ui.task.TaskFragment"
         tools:layout="@layout/task_fragment">
         <argument
