--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -67,7 +67,14 @@
 
 
 
-    <style name="Theme.TeachUaV20.AppBarOverlay" parent="Theme.AppCompat.NoActionBar" />
-
     <style name="Theme.TeachUaV20.PopupOverlay" parent="Theme.AppCompat.NoActionBar" />
+
+    <style name="Theme.TeachUaV20.AppBarOverlay" parent="Theme.AppCompat.NoActionBar" >
+        <!-- This is the menu item text color. -->
+        <item name="android:textColorPrimary">@color/white</item>
+        <!-- This is the menu header text color. -->
+        <item name="android:textColorSecondary">@color/white</item>
+        <!-- This is the selected color. -->
+        <item name="colorPrimary">@color/toolbar_orange</item>
+    </style>
 </resources>
