fixed tb colors and drawer tabs colors

--- a/app/src/main/res/layout/club_item.xml
+++ b/app/src/main/res/layout/club_item.xml
@@ -59,7 +59,7 @@
             android:layout_marginTop="70dp"
             android:background="@drawable/category_background"
             android:text="club CategoryTitle"
-            android:textColor="?colorOnSurface"
+            android:textColor="@color/white"
             android:textSize="13sp" />
 
         <TextView
