--- a/app/src/main/res/layout/fragment_clubs.xml
+++ b/app/src/main/res/layout/fragment_clubs.xml
@@ -46,7 +46,7 @@
                         android:layout_marginStart="50dp"
                         android:layout_marginTop="15dp"
                         android:text="Гуртки"
-                        android:textColor="?attr/colorOnPrimary"
+                        android:textColor="@color/white"
                         android:textSize="20sp"
                         android:textStyle="bold" />
 
