--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -9,6 +9,7 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
+        android:background="@color/toolbar_orange"
         android:layout_height="?attr/actionBarSize"
         android:visibility="visible" />
 </com.google.android.material.appbar.AppBarLayout>
