--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,7 +9,11 @@
         android:id="@+id/nav_home"
         android:name="com.softserve.teachua.ui.home.HomeFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home"/>
+        tools:layout="@layout/fragment_home">
+        <action
+            android:id="@+id/action_nav_home_to_challengeFragment"
+            app:destination="@id/challengeFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_clubs"
