Fixed showing html tags in description of ChallengeFragment.kt and TaskFragment.kt

--- a/app/src/main/res/layout/fragment_clubs.xml
+++ b/app/src/main/res/layout/fragment_clubs.xml
@@ -11,9 +11,9 @@
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
 
+        android:id="@+id/contentClubs"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/contentClubs"
         android:background="@drawable/main_background"
         android:orientation="vertical">
 
@@ -81,24 +81,22 @@
                         android:visibility="visible" />
 
 
-                    <androidx.appcompat.widget.AppCompatImageView
+                    <ImageView
                         android:id="@+id/searchBtn"
                         android:layout_width="45dp"
                         android:layout_height="45dp"
                         android:layout_marginStart="235dp"
                         android:layout_marginTop="80dp"
-                        android:background="@drawable/ic_search"
-                         />
+                        android:background="@drawable/ic_search" />
 
 
-                    <androidx.appcompat.widget.AppCompatImageView
+                    <ImageView
                         android:id="@+id/searchAdvBtn"
                         android:layout_width="45dp"
                         android:layout_height="45dp"
                         android:layout_marginStart="290dp"
                         android:layout_marginTop="80dp"
-                        android:background="@drawable/ic_adv_search"
-                         />
+                        android:background="@drawable/ic_adv_search" />
 
 
                     <Spinner
@@ -132,10 +130,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Error Loading Clubs"
-            android:textSize="20sp"
-            android:visibility="invisible"
             android:textColor="@color/white"
+            android:textSize="20sp"
             android:textStyle="bold"
+            android:visibility="invisible"
             app:layout_anchor="@+id/rcv"
             app:layout_anchorGravity="center" />
 
@@ -169,8 +167,8 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="visible"
         android:outlineAmbientShadowColor="?attr/colorPrimary"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
