--- a/app/src/main/res/layout/challenge_fragment.xml
+++ b/app/src/main/res/layout/challenge_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -56,14 +57,14 @@
                     android:textStyle="bold" />
 
                 <ImageView
-                    android:id="@+id/ytbBtn"
+                    android:id="@+id/fcbBtn"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:layout_marginStart="120dp"
-                    android:background="@drawable/ic_baseline_facebook_24" />
+                    android:src="@drawable/ic_baseline_facebook_24" />
 
                 <ImageView
-                    android:id="@+id/fcbBtn"
+                    android:id="@+id/ytbBtn"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:layout_marginStart="150dp"
@@ -87,7 +88,7 @@
 
             <TextView
                 android:id="@+id/challengeDescription"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:text="Heere are some decription"
