added test fragment for login

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -22,6 +22,12 @@
             android:id="@+id/nav_about_us"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/menu_about_us"
-        />
+            />
+
+        <item
+            android:id="@+id/nav_login"
+            android:icon="@drawable/ic_menu_slideshow"
+            android:title="@string/login"
+            />
     </group>
 </menu>
