fixer updatin app bar when user logged in, added info about user, his name and surname, his logo, and his role

--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/nav_header_height"
+    android:layout_height="wrap_content"
     android:background="@color/orange_100"
     android:gravity="top"
     android:orientation="vertical"
@@ -40,7 +40,9 @@
             android:id="@+id/navigation_image_in_drawer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="16dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             tools:ignore="ContentDescription">
 
         </ImageView>
@@ -48,10 +50,12 @@
 
 
     <ViewFlipper
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/account_container"
         android:layout_width="match_parent"
-        android:padding="30dp">
+        android:layout_marginTop="0dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp">
 
         <include android:id="@+id/logged_in_user"
             layout="@layout/logged_in_user_nav_section" />
@@ -65,7 +69,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="0.2dp"
         android:background="@color/gray_200"/>
 
 
