--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -3,5 +3,5 @@
     android:shape="oval">
     <stroke
         android:width="1dp"
-        android:color="#78d9ff"/>
+        android:color="@android:color/transparent"/>
 </shape>
